--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
 
     <div>
       <h1>About Us</h1>
-      <h2>We're pretty cool.</h2>
+      <h2>We're pretty cool!</h2>
     </div>
 
     <!-- imports all script files including project's script.js file, jQuery, and bootstrap script files -->
