--- a/templates/home.html
+++ b/templates/home.html
@@ -1,31 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> <!-- imports bootstrap -->
-    <link rel="stylesheet" type="text/css" href="../styles/styles.css"> <!-- imports styles.css stylesheet -->
-    <title>Final Project</title>
+    <title> LOVE4PETS </title> <!-- title of your website that shows in the browser tab only-->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> <!-- links the bootstrap library -->
+    <link rel="stylesheet" href="../styles/styles.css"> <!-- links your style.css file -->
   </head>
   <body>
+    <!-- everything goes here between the <body> tags -->
+   <div2>
+<!--      <img src="https://www.brandcrowd.com//maker/asset/draft/b65c2113-1f74-4e2b-93a4-2be7d0f84dbf/image/large.png" alt="..."> -->
+  <h1 style="background-color:rgba(255, 99, 71, 0.5);"> LOVE4PETS - PET CARE WEBSITE </h1>
+</div2>
 
-    <div>
-      <h1>Hello Welcome To My World!</h1>
-      <h2>Visit the <a href="/about">About</a> page or fill out the form below:</h2> <!-- example of how to link to another page -- through it's route -->
-      <!-- form data gets processed by "/results." Note the "name" of each input and how it's referenced in the "/results" handler -->
-      <form method =”post” action="/results">
-        Your Name:<br>
-        <input type="text" name="user-first-name">
-        <br>
-        How are you feeling?<br>
-        <input type="text" name="user-feeling"><br>
-        <input type="submit" value="Go!">
-      </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"> <img src="https://image.flaticon.com/icons/png/128/489/489868.png" alt="..."> </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#"> <strong> HOME </strong> <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#"> <strong> DOGS </strong></a>
+      <a class="nav-item nav-link" href="#"> <strong> CATS </strong> </a>
+      <a class="nav-item nav-link" href="#"> <strong> BUNNIES </strong> </a>
+        <a class="nav-item nav-link" href="#"> <strong> VETS </strong> </a>
+        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
+       <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/1933/1933980.png" alt="..."> </a>
+        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
+        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
+        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
+        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
+      <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/489/489868.png" alt="..."> </a>
+
     </div>
+  </div>
+</nav>
 
-    <!-- imports all script files including project's script.js file, jQuery, and bootstrap script files -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <h5>
+      where we help you care for your pets and meet the needs all in one
+    </h5>
+
+    <p>
+      Our website offers easy assessible information on how to take care of your pet. We believe all pets should be treated with care and raised in a healthy environment.
+
+<!--     <img src="http://www.dogbazar.org/wp-content/uploads/2013/10/banner-08.jpg" width="1370" height="400" alt="..."> -->
+
+
+<!--     the big slidy image -->
+
+    <div class="bd-example">
+  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="http://www.dogbazar.org/wp-content/uploads/2013/10/banner-08.jpg" width="1370" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3> LOVE4PETS offers information on the specific pets </h3>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://giftshopmag.com/wp-content/uploads/2018/09/State-of-the-Pet-Industry-header-1024x293.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3> pets have feelings too lmao </h3>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://www.fleetfarm.com/images/static/petsL1_header.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3> we against animal abuse 😎 </h3>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- do not remove below ---- imports bootstrap and jQuery libraries -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../scripts/script.js"></script>
+    <script src="/script.js" defer></script> <!-- links for script.js file -->
   </body>
 </html>
