--- a/templates/home.html
+++ b/templates/home.html
@@ -23,11 +23,11 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="#"> <strong> HOME </strong> <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#"> <strong> DOGS </strong></a>
+      <a class="nav-item nav-link" href="/pets"> <strong> DOGS </strong></a>
       <a class="nav-item nav-link" href="#"> <strong> CATS </strong> </a>
-      <a class="nav-item nav-link" href="#"> <strong> BUNNIES </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> VETS </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
+      <a class="nav-item nav-link" href="#"> <strong> GOLDFISH </strong> </a>
+        <a class="nav-item nav-link" href="#"> <strong> SNAKE </strong> </a>
+        <a class="nav-item nav-link" href="#"> <strong> MICE </strong> </a>
        <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/1933/1933980.png" alt="..."> </a>
         <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
         <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
