--- a/templates/pets.html
+++ b/templates/pets.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html>
   <head>
     <title> LOVE4PETS </title> <!-- title of your website that shows in the browser tab only-->
     <meta charset="utf-8">
@@ -7,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> <!-- links the bootstrap library -->
     <link rel="stylesheet" href="../styles/styles.css"> <!-- links your style.css file -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> <!-- imports bootstrap -->
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css"> <!-- imports styles.css stylesheet -->
+    <title>Final Project</title>
   </head>
   <body>
     <!-- everything goes here between the <body> tags -->
@@ -58,6 +62,10 @@
     <div class="card-body">
       <h12 class="card-title"> Shoto Todoroki</h12>
       <p15 class="card-text"> : Student at U.A. Highschool, quirk: half-cold half-hot, age: 16, height: 5'9, birthday: january 11th. </p15>
+
+    <div>
+      <!-- has placeholders for data from "ResultsHanler" on main.py -->
+      <h1>Hello {{name}}, interesting that you're feeling {{feeling}} today.</h1>
     </div>
   </div>
   <div class="card">
@@ -99,9 +107,12 @@
 
 
     <!-- do not remove below ---- imports bootstrap and jQuery libraries -->
+    <!-- imports all script files including project's script.js file, jQuery, and bootstrap script files -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="/script.js" defer></script> <!-- links for script.js file -->
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
