--- a/templates/home.html
+++ b/templates/home.html
@@ -95,35 +95,35 @@
     <img src="https://www.nationalgeographic.com/content/dam/animals/thumbs/rights-exempt/mammals/d/domestic-dog_thumb.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title"> DOGS </h12>
-      <p15 class="card-text"> : Student at U.A. Highschool, quirk: half-cold half-hot, age: 16, height: 5'9, birthday: january 11th. </p15>
+      <p15 class="card-text"> :Click here to learn how to take care of dogs</p15>
     </div>
   </div>
   <div class="card">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title"> CATS </h12>
-      <p15 class="card-text"> : Student at U.A. Highschool, quirk: explosion, age: 15, height: 5'7, birthday: april 20th. </p15>
+      <p15 class="card-text"> : Click here to learn how to take care of a cat </p15>
     </div>
   </div>
   <div class="card">
     <img src="https://m.liveaquaria.com/images/categories/large/lg_39290_Red_Ryukin.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title"> GOLDFISH </h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
+      <p15 class="card-text"> : Click here to learn how to take care of a goldfish </p15>
     </div>
   </div>
   <div class="card">
     <img src="https://i.imgur.com/nkmExYl.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title"> SNAKES </h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
+      <p15 class="card-text"> : Click here to learn how to take care of a corn snake </p15>
     </div>
   </div>
   <div class="card">
     <img src="https://pbs.twimg.com/media/Dg6DVKtXkAAsi7H.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title"> MICE </h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
+      <p15 class="card-text"> : Click here to learn how to take care of a mouse </p15>
     </div>
   </div>
 </div>
