--- a/templates/home.html
+++ b/templates/home.html
@@ -96,6 +96,7 @@
     <div class="card-body">
       <h12 class="card-title"> DOGS </h12>
       <p15 class="card-text"> :Click here to learn how to take care of dogs</p15>
+       <a href="/dogs" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
   <div class="card">
@@ -103,6 +104,7 @@
     <div class="card-body">
       <h12 class="card-title"> CATS </h12>
       <p15 class="card-text"> : Click here to learn how to take care of a cat </p15>
+       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
   <div class="card">
@@ -110,6 +112,7 @@
     <div class="card-body">
       <h12 class="card-title"> GOLDFISH </h12>
       <p15 class="card-text"> : Click here to learn how to take care of a goldfish </p15>
+       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
   <div class="card">
@@ -117,13 +120,15 @@
     <div class="card-body">
       <h12 class="card-title"> SNAKES </h12>
       <p15 class="card-text"> : Click here to learn how to take care of a corn snake </p15>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
   <div class="card">
-    <img src="https://pbs.twimg.com/media/Dg6DVKtXkAAsi7H.jpg" class="card-img-top" alt="...">
+    <img src="http://images4.fanpop.com/image/photos/16200000/Cute-mouse-i-found-on-the-internet-D-egomouse-16282072-500-375.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title"> MICE </h12>
       <p15 class="card-text"> : Click here to learn how to take care of a mouse </p15>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
 </div>
