Dog Page Almost Done

--- a/templates/home.html
+++ b/templates/home.html
@@ -97,7 +97,7 @@
     <div class="card-body">
       <h12 class="card-title"> DOGS </h12>
       <p15 class="card-text"> :Click here to learn how to take care of dogs</p15>
-       <a href="/dogs" class="btn btn-primary">Go somewhere</a>
+       <a href="/dogs" class="btn btn-primary">Dog Care</a>
     </div>
   </div>
   <div class="card">
@@ -105,7 +105,7 @@
     <div class="card-body">
       <h12 class="card-title"> CATS </h12>
       <p15 class="card-text"> : Click here to learn how to take care of a cat </p15>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+       <a href="/cats" class="btn btn-primary">Cat Care</a>
     </div>
   </div>
   <div class="card">
@@ -113,15 +113,15 @@
     <div class="card-body">
       <h12 class="card-title"> GOLDFISH </h12>
       <p15 class="card-text"> : Click here to learn how to take care of a goldfish </p15>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+       <a href="/goldfish" class="btn btn-primary">Goldfish Care</a>
     </div>
   </div>
   <div class="card">
     <img src="https://i.imgur.com/nkmExYl.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h12 class="card-title"> SNAKES </h12>
+      <h12 class="card-title"> CORN SNAKES</h12>
       <p15 class="card-text"> : Click here to learn how to take care of a corn snake </p15>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="/snakes" class="btn btn-primary">Corn Snake Care</a>
     </div>
   </div>
   <div class="card">
@@ -129,7 +129,7 @@
     <div class="card-body">
       <h12 class="card-title"> MICE </h12>
       <p15 class="card-text"> : Click here to learn how to take care of a mouse </p15>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="/mice" class="btn btn-primary">Mouse Care</a>
     </div>
   </div>
 </div>
