--- a/templates/goldfish.html
+++ b/templates/goldfish.html
@@ -58,41 +58,49 @@
 
 <div class="card-deck">
   <div class="card">
-    <img src="http://cdn.akc.org/Images_For_Hero/dog-wheat-cover.jpg" class="card-img-top" alt="...">
+    <img src="https://vignette.wikia.nocookie.net/bokunoheroacademia/images/9/9a/Shoto3.png/revision/latest?cb=20181002190218&path-prefix=pt-br" class="card-img-top" alt="...">
     <div class="card-body">
-      <h12 class="card-title"> DOGS </h12>
-      <p15 class="card-text"> : dogs have to eat food. </p15>
+      <h12 class="card-title"> Shoto Todoroki</h12>
+      <p15 class="card-text"> : Student at U.A. Highschool, quirk: half-cold half-hot, age: 16, height: 5'9, birthday: january 11th. </p15>
+
+    <div>
+      <!-- has placeholders for data from "ResultsHanler" on main.py -->
+      <h1>Hello {{name}}, interesting that you're feeling {{feeling}} today.</h1>
     </div>
   </div>
   <div class="card">
-    <img src="http://germanshepherdworld.com/wp-content/uploads/2017/12/Chocolate-Toxicity-in-German-Shepherds.jpg" class="card-img-top" alt="...">
+    <img src="https://pbs.twimg.com/media/DDdyoSVUQAAFnKu.jpg:large" class="card-img-top" alt="...">
     <div class="card-body">
-      <h12 class="card-title"> DOGS </h12>
-      <p15 class="card-text"> : cannot eat cochocolate </p15>
-    </div>
-  </div>
-  <div class="card">
-    <img src="https://m.liveaquaria.com/images/categories/large/lg_39290_Red_Ryukin.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h12 class="card-title"> GOLDFISH </h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
-    </div>
-  </div>
-  <div class="card">
-    <img src="https://i.imgur.com/nkmExYl.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h12 class="card-title"> SNAKES </h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
+      <h12 class="card-title"> Katsuki Bakugou</h12>
+      <p15 class="card-text"> : Student at U.A. Highschool, quirk: explosion, age: 15, height: 5'7, birthday: april 20th. </p15>
     </div>
   </div>
   <div class="card">
     <img src="https://pbs.twimg.com/media/Dg6DVKtXkAAsi7H.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h12 class="card-title"> MICE </h12>
+      <h12 class="card-title"> Shota Aizawa</h12>
       <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
     </div>
   </div>
 </div>
+
+<!-- <div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>John Doe</h1>
+      <p>Architect & Engineer</p>
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> -->
+
+
+
+
+
 
 
 
