--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
 
-      <a class="nav-item nav-link active" href="/"> <strong> HOME </strong> <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="/home"> <strong> HOME </strong> <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="/dogs"> <strong> DOGS </strong></a>
       <a class="nav-item nav-link" href="/cats"> <strong> CATS </strong> </a>
       <a class="nav-item nav-link" href="/goldfish"> <strong> GOLDFISH </strong> </a>
