--- a/templates/home.html
+++ b/templates/home.html
@@ -7,52 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> <!-- links the bootstrap library -->
     <link rel="stylesheet" href="../styles/styles.css"> <!-- links your style.css file -->
-    <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque|Source+Code+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- everything goes here between the <body> tags -->
-   <div2>
-<!--      <img src="https://www.brandcrowd.com//maker/asset/draft/b65c2113-1f74-4e2b-93a4-2be7d0f84dbf/image/large.png" alt="..."> -->
-  <h1 id="f" style="color:#f7b2ad;font-size:60px;"> LOVE4PETS - PET CARE WEBSITE </h1>
-</div2>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"> <img src="https://image.flaticon.com/icons/png/128/489/489868.png" alt="..."> </a>
+    <nav id="novi" class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#"> <strong> HOME </strong> <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/dogs"> <strong> DOGS </strong></a>
-      <a class="nav-item nav-link" href="#"> <strong> CATS </strong> </a>
-      <a class="nav-item nav-link" href="#"> <strong> GOLDFISH </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> SNAKE </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> MICE </strong> </a>
-       <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/1933/1933980.png" alt="..."> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
-      <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/489/489868.png" alt="..."> </a>
+      <a class="nav-item nav-link" href="/dogs" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/dog.png"> </strong></a>
+      <a class="nav-item nav-link" href="#" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/cat.png"> </strong> </a>
+      <a class="nav-item nav-link" href="#" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/whole-fish.png"> </strong> </a>
+        <a class="nav-item nav-link" href="#" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/snake.png"> </strong> </a>
+        <a class="nav-item nav-link" href="#" class="left"> <strong> <img src="https://img.icons8.com/dotty/50/000000/mouse-animal.png"> </strong> </a>
+        <a class="nav-item nav-link active" href="#" id="w"> <strong> LOVE4PETS </strong> <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#" class="right"> <strong> DOG<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
+        <a class="nav-item nav-link" href="#" class="right"> <strong> CAT<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
+        <a class="nav-item nav-link" href="#" class="right"> <strong> GOLDFISH<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
+        <a class="nav-item nav-link" href="#" class="right"> <strong> SNAKE<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
+        <a class="nav-item nav-link" href="#" class="right"> <strong> MICE<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
 
     </div>
   </div>
 </nav>
-<div class="c">
-
-    <h3 style="color:#ff6500;" class="c">
-      Where We Help You Care For Your Pets And Meet The Needs All In One
-    </h3>
-    <p class="c">
-      Our website offers easy assessible information on how to take care of your pet. We believe all pets should be treated with care and raised in a healthy environment.
-    </p>
-  </div>
 <!--     <img src="http://www.dogbazar.org/wp-content/uploads/2013/10/banner-08.jpg" width="1370" height="400" alt="..."> -->
 
 
 <!--     the big slidy image -->
-
+<br><br>
     <div class="bd-example">
   <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -62,19 +46,19 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="http://www.dogbazar.org/wp-content/uploads/2013/10/banner-08.jpg" width="1370" class="d-block w-100" alt="...">
+        <img src="https://www.animalhavenshelter.org/wp-content/uploads/2015/12/dog-and-cat-banner-2.png" width="600px" heigth="500px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h3> LOVE4PETS offers information on the specific pets </h3>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://giftshopmag.com/wp-content/uploads/2018/09/State-of-the-Pet-Industry-header-1024x293.png" class="d-block w-100" alt="...">
+        <img src="https://www.vippetcare.com/wp-content/uploads/2017/01/Screen-Shot-2018-02-05-at-3.57.14-PM.png" class="d-block w-100" width="600px" heigth="500px" >
         <div class="carousel-caption d-none d-md-block">
           <h3> pets have feelings too lmao </h3>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://www.fleetfarm.com/images/static/petsL1_header.jpg" class="d-block w-100" alt="...">
+        <img src="https://atom.club/wp-content/uploads/pets.jpg" class="d-block w-100" width="100%" heigth="500px">
         <div class="carousel-caption d-none d-md-block">
           <h3> we against animal abuse 😎 </h3>
         </div>
@@ -89,7 +73,29 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-</div>
+  <div2>
+  <!--      <img src="https://www.brandcrowd.com//maker/asset/draft/b65c2113-1f74-4e2b-93a4-2be7d0f84dbf/image/large.png" alt="..."> -->
+  <h1 id="f" style="color:#f7b2ad;font-size:60px;"> LOVE4PETS - PET CARE WEBSITE </h1>
+  </div2>
+
+<table class="c">
+  <tr>
+    <td id="cellLeft">
+      <img class="img-size" src="http://www.capecodpetresort.com/wp-content/uploads/banner-pets-dog-cat-boarding-1000x451.png" width="50%">
+    </td>
+    <td id='cellRight'>
+      <center>
+      <h4> Where We Help You Care For Your Pets And Meet The Needs All In One  </h4>
+      <p>Our website offers easy assessible information on how to take care of your pet. We believe all pets should be treated with care and raised in a healthy environment.</p>
+    </center>
+    </td>
+  </tr>
+</table>
+
+<br>
+<hr>
+<br>
+
 
 <div class="card-deck">
   <div class="card">
