--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,17 @@
 
 body{
-  background-color: #000000;
-  font-family: 'Source Code Pro', monospace;
-  color: white;
-  margin: 2em;
+  background-color: #1D2228;
+  font-family: 'Josefin Sans', sans-serif;
+  color: #E1E2E2;
 }
 h1{
-  font: "Lucida Console";
-  font-style: italic;
   color: #ffffff;
   text-align: center;
   text-shadow: 2px 2px 5px grey;
   margin-top: 50px;
   margin-bottom: 50px;
-  margin-right: 150px;
-  margin-left: 80px;
+  /* margin-right: 150px;
+  margin-left: 80px; */
 }
 
 /* CSS files add styling rules to your content */
@@ -24,8 +21,13 @@ h1{
 h3 {
   text-align: center;
   text-shadow: 2px 2px 5px grey;
-  color: #ffffff;
 }
+
+h4 {
+  text-shadow: 2px 2px 5px grey;
+  color:#000080;
+}
+
 h5 {
     color: #ffffff;
    text-align: center;
@@ -39,12 +41,12 @@ div3 {
 }
 p {
     color: #ffffff;
-  text-align: center;
+    font-size:20px;
+  /*text-align: center;
     margin-top: 20px;
   margin-bottom: 20px;
   margin-right: 150px;
-  margin-left: 80px;
-
+*/
 }
 #a{
   font-size: 60px;
@@ -56,19 +58,60 @@ p {
   border: 0px;
   padding:0px;
   text-align: center;
-  font-family: 'Darker Grotesque', sans-serif;
 }
-nav{
-  opacity: 0.5;
-  background-color: #000000;
+#novi{
+  margin-top: 0px;
+  background-color: #ffffff;
+  width:100%;
+
 }
+.left{
+  float:left;
+}
+.right{
+  text-align: center;
+  float: right;
+}
+
 .c{
-   margin-left: 12%;
-   margin-right: 12%;
-  text-align:center;
+  /* text-align:center; */
+  background-color:#D48166;
+  height:500px;
+}
+.img-size{
+  width:100%;
+  height:80%;
+  margin-left:4%;
 }
 
+#j{
+  float:right;
+}
 
+#w{
+  color:pink;
+  font-size: 50px;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+#q{
+  padding-left:5%;
+  padding-right: 5%;
+}
+hr{
+  color:white;
+}
+#cellLeft{
+  width: 70%;
+  margin:5%;
+}
+#cellRight{
+  width:30%;
+  padding-left: 50px;
+  padding-right: 50px;
+  text-align: justify;
+  color:black;
+}
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
   background-color: transparent;
