--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,13 @@
 <form action="action_page.php">
-  <div class="imgcontainer">
-    <img src="https://i.pinimg.com/originals/44/d9/8c/44d98cccb725fd3a80c0446b9b2e646d.jpg" width="300" height="200" alt="Avatar" class="avatar">
-  </div>
+<html>
+  <body background="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/658a4b53118539.592b101abee14.gif">
+      <h1> WELCOME TO THE LOVE4PETS LOGIN PAGE </h1>
+        <p><a href="/home"> LOVE4PETS </a></p>
+  </body>
+</html>
 
-  <div class="container">
+
+  <div3 class="container">
     <label for="uname"><b>Username: </b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
 
@@ -14,8 +18,5 @@
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
-  </div>
-
-  <div class="container" style="background-color:#f1f1f1">
-  </div>
+  </div3>
 </form>
