--- a/templates/pets.html
+++ b/templates/pets.html
@@ -61,35 +61,35 @@
     <img src="http://cdn.akc.org/Images_For_Hero/dog-wheat-cover.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title"> DOGS </h12>
-      <p15 class="card-text"> : dogs have to eat food. </p15>
+      <p15 class="card-text"> : dogs have to eat food. Dry or wet commercial food is recommended. </p15>
     </div>
   </div>
   <div class="card">
     <img src="http://germanshepherdworld.com/wp-content/uploads/2017/12/Chocolate-Toxicity-in-German-Shepherds.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title"> DOGS </h12>
-      <p15 class="card-text"> : cannot eat cochocolate </p15>
+      <p15 class="card-text"> : cannot eat cochocolate. </p15>
     </div>
   </div>
   <div class="card">
-    <img src="https://m.liveaquaria.com/images/categories/large/lg_39290_Red_Ryukin.jpg" class="card-img-top" alt="...">
+    <img src="http://www.abajournal.com/images/main_images/dog_and_goldfish.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h12 class="card-title"> GOLDFISH </h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
+      <h12 class="card-title"> DOGS </h12>
+      <p15 class="card-text"> : are far more difficult to take care of than mice and goldfish. </p15>
     </div>
   </div>
   <div class="card">
-    <img src="https://i.imgur.com/nkmExYl.jpg" class="card-img-top" alt="...">
+    <img src="https://animalwellnessmagazine.com/wp-content/uploads/grooming-dog-e1522697164552.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h12 class="card-title"> SNAKES </h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
+      <h12 class="card-title"> DOGS </h12>
+      <p15 class="card-text"> : need to be groomed ever so often to keep them clean. </p15>
     </div>
   </div>
   <div class="card">
-    <img src="https://pbs.twimg.com/media/Dg6DVKtXkAAsi7H.jpg" class="card-img-top" alt="...">
+    <img src="https://www.vetriscience.com/blog/wp-content/uploads/2017/11/shutterstock_402932965-2.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h12 class="card-title"> MICE </h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
+      <h12 class="card-title"> DOGS </h12>
+      <p15 class="card-text"> : dogs need to be checked in on at the vet omce in a while, like a check up to see how their health is. </p15>
     </div>
   </div>
 </div>
