--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
         <a class="nav-item nav-link" href="dogs" class="right"> <strong> DOG<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
         <a class="nav-item nav-link" href="cats" class="right"> <strong> CAT<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
         <a class="nav-item nav-link" href="goldfish" class="right"> <strong> GOLDFISH<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
-        <a class="nav-item nav-link" href="snake" class="right"> <strong> SNAKE<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
+        <a class="nav-item nav-link" href="snakes" class="right"> <strong> SNAKE<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
         <a class="nav-item nav-link" href="mice" class="right"> <strong> MICE<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
 
 
