--- a/templates/snakes.html
+++ b/templates/snakes.html
@@ -59,21 +59,21 @@
 
 <div class="card-deck">
   <div class="card">
-    <img src="https://thehappypuppysite.com/wp-content/uploads/2017/03/dog-sizes-1.jpg" class="card-img-top" alt="...">
+    <img src="https://usercontent1.hubstatic.com/11979864_f520.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">Basics</h12>
       <p15 class="card-text">:Dogs should be handled with much care. Dogs need lots of attention, which ranks their difficulty at hard.
       </p15>
   </div>
   <div class="card">
-    <img src="https://puplifetoday.com/wp-content/uploads/2018/07/dog-food-for-puppies.jpg" class="card-img-top" alt="...">
+    <img src="https://reptilepark.com.au/wp-content/uploads/2015/12/exotic_corn_snake.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">Food</h12>
       <p15 class="card-text">:Dogs should be fed one bowl a day according to their size. They should eat dry or wet commercial dog foods. Try to avoid human food, and give thems snacks meant for dogs.</p15>
     </div>
   </div>
   <div class="card">
-    <img src="https://www.abc.net.au/cm/rimage/10697242-16x9-xlarge.jpg?v=2" class="card-img-top" alt="...">
+    <img src="https://i1.wp.com/reptilianostra.org/wp-content/uploads/2019/04/butter-corn-snake4-1.jpg?fit=1000%2C1000&ssl=1" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">Needs</h12>
       <p15 class="card-text"> : Dogs will need to be groomed. Smaller dogs often require more grooming than large dogs. Every dog needs to be spayed or nutered as well </p15>
@@ -82,7 +82,7 @@
 </div>
 <div class="card-deck">
   <div class="card">
-    <img src="https://i.ytimg.com/vi/yfiAwfFO5gs/maxresdefault.jpg" class="card-img-top" alt="...">
+    <img src="http://www.worldofballpythons.com/files/morphs/banana-sterling-spinner/001.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">DANGERS</h12>
       <p15 class="card-text"> : There are many things that are harmful to a dog, but be especially careful with what you feed your dog. You should never feed your dog grapes, rasisns, or chocolates. This will cause serious pain for your dog, and maybe even death.
