--- a/templates/snakes.html
+++ b/templates/snakes.html
@@ -34,12 +34,12 @@
         <a class="nav-item nav-link" href="/snakes"> <strong> SNAKE </strong> </a>
         <a class="nav-item nav-link" href="/mice"> <strong> MICE </strong> </a>
        <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/1933/1933980.png" alt="..."> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
+        <a class="nav-item nav-link" href=""> <strong> PET STORES </strong> </a>
         <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
         <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
         <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
       <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/489/489868.png" alt="..."> </a>
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d50453.40360354303!2d-122.25761806322342!3d37.78212434034186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1spet+stores!5e0!3m2!1sen!2sus!4v1564166099243!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
   </div>
 </nav>
