--- a/templates/goldfish.html
+++ b/templates/goldfish.html
@@ -59,33 +59,7 @@
 <div class="card-deck">
   <div class="card">
 
-    <img src="https://vignette.wikia.nocookie.net/bokunoheroacademia/images/9/9a/Shoto3.png/revision/latest?cb=20181002190218&path-prefix=pt-br" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h12 class="card-title"> Shoto Todoroki</h12>
-      <p15 class="card-text"> : Student at U.A. Highschool, quirk: half-cold half-hot, age: 16, height: 5'9, birthday: january 11th. </p15>
-
-    <div>
-      <!-- has placeholders for data from "ResultsHanler" on main.py -->
-      <h1>Hello {{name}}, interesting that you're feeling {{feeling}} today.</h1>
-    </div>
-  </div>
-  <div class="card">
-    <img src="https://pbs.twimg.com/media/DDdyoSVUQAAFnKu.jpg:large" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h12 class="card-title"> Katsuki Bakugou</h12>
-      <p15 class="card-text"> : Student at U.A. Highschool, quirk: explosion, age: 15, height: 5'7, birthday: april 20th. </p15>
-    </div>
-  </div>
-  <div class="card">
-    <img src="https://pbs.twimg.com/media/Dg6DVKtXkAAsi7H.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h12 class="card-title"> Shota Aizawa</h12>
-      <p15 class="card-text"> : Pro hero and teacher at U.A. Highschool, quirk: erasure, age: 31, height: 6'0, birthday: november 8th. </p15>
-    </div>
-  </div>
-</div>
-
-    <img src="https://thehappypuppysite.com/wp-content/uploads/2017/03/dog-sizes-1.jpg" class="card-img-top" alt="...">
+    <img src="https://live.staticflickr.com/5815/21849193743_a5b0052aed_b.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">Basics</h12>
       <p15 class="card-text">: Goldfish are a wonderful starter pet. They do not require heavy care or attention ranking them as an easy pet to take care of.
