--- a/templates/snakes.html
+++ b/templates/snakes.html
@@ -55,7 +55,8 @@
 
 <!--     the big slidy image -->
 
-    <div class="card-body">
+<div class="card-deck">
+  <div class="card">
       <h12 class="card-title">Basics</h12>
       <p15 class="card-text">: Snakes are very cool pets. Snakes require some attention, which ranks their difficulty at medium. This page is specifically based off of Corn Snakes
       </p15>
