--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,6 @@
     <title></title>
   </head>
 
-
   <body background="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/658a4b53118539.592b101abee14.gif">
       <h1> WELCOME TO THE LOVE4PETS LOGIN PAGE </h1>
         <p><a href="/home"> LOVE4PETS </a></p>
@@ -25,4 +24,6 @@
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
   </div>
-</form>
+
+</body>
+</html>
