--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
+<head>
+  <title> LOVE4PETS </title> <!-- title of your website that shows in the browser tab only-->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../styles/styles.css"> <!-- links your style.css file -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> <!-- imports bootstrap -->
+  <link rel="stylesheet" type="text/css" href="../styles/styles.css"> <!-- imports styles.css stylesheet -->
+  <title>Final Project</title>
+</head>
+
 
   <body background="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/658a4b53118539.592b101abee14.gif">
+    <nav id="novi" class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+
+      <a class="nav-item nav-link" href="/dogs" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/dog.png"> </strong></a>
+      <a class="nav-item nav-link" href="/cats" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/cat.png"> </strong> </a>
+
+      <a class="nav-item nav-link" href="/goldfish" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/whole-fish.png"> </strong> </a>
+        <a class="nav-item nav-link" href="/snakes" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/snake.png"> </strong> </a>
+        <a class="nav-item nav-link" href="/mice" class="left"> <strong> <img src="https://img.icons8.com/dotty/50/000000/mouse-animal.png"> </strong> </a>
+        <a class="nav-item nav-link active" href="/home" id="w"> <strong> LOVE4PETS </strong> <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/petstores"> <strong><img src="https://img.icons8.com/ios/50/000000/online-store.png"></strong> </a>
+        <a class="nav-item nav-link" href="vets"> <strong> <img src="https://img.icons8.com/ios/50/000000/hospital.png"> </strong> </a>
+        <a class="nav-item nav-link" href="/"> <strong><img src="https://img.icons8.com/cotton/50/000000/person-male--v2.png"></strong> </a>
+
+
+
+    </div>
+  </div>
+  </nav>
       <h1> WELCOME TO THE LOVE4PETS LOGIN PAGE </h1>
         <p><a href="/home"> LOVE4PETS </a></p>
+
 
 
 
@@ -25,5 +56,10 @@
     </label>
   </div>
 
-</body>
-</html>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="/script.js" defer></script> <!-- links for script.js file -->
+  <script src="../scripts/script.js"></script>
+  </body>
+  </html>
