--- a/templates/mouse.html
+++ b/templates/mouse.html
@@ -14,34 +14,31 @@
   </head>
   <body>
     <!-- everything goes here between the <body> tags -->
-   <div2>
-<!--      <img src="https://www.brandcrowd.com//maker/asset/draft/b65c2113-1f74-4e2b-93a4-2be7d0f84dbf/image/large.png" alt="..."> -->
-  <h1 style="background-color:rgba(255, 99, 71, 0.5);"> LOVE4PETS - PET CARE WEBSITE </h1>
-</div2>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"> <img src="https://image.flaticon.com/icons/png/128/489/489868.png" alt="..."> </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+    <nav id="novi" class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/home"> <strong> HOME </strong> <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/dogs"> <strong> DOGS </strong></a>
-      <a class="nav-item nav-link" href="/cats"> <strong> CATS </strong> </a>
-      <a class="nav-item nav-link" href="/goldfish"> <strong> GOLDFISH </strong> </a>
-        <a class="nav-item nav-link" href="/snakes"> <strong> SNAKE </strong> </a>
-        <a class="nav-item nav-link" href="/mice"> <strong> MICE </strong> </a>
-       <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/1933/1933980.png" alt="..."> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
-        <a class="nav-item nav-link" href="#"> <strong> PET STORES </strong> </a>
-      <a class="nav-item nav-link" href="#"> <img src="https://image.flaticon.com/icons/png/128/489/489868.png" alt="..."> </a>
+
+      <a class="nav-item nav-link" href="/dogs" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/dog.png"> </strong></a>
+      <a class="nav-item nav-link" href="/cats" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/cat.png"> </strong> </a>
+
+      <a class="nav-item nav-link" href="/goldfish" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/whole-fish.png"> </strong> </a>
+        <a class="nav-item nav-link" href="/snakes" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/snake.png"> </strong> </a>
+        <a class="nav-item nav-link" href="/mice" class="left"> <strong> <img src="https://img.icons8.com/dotty/50/000000/mouse-animal.png"> </strong> </a>
+        <a class="nav-item nav-link active" href="/home" id="w"> <strong> LOVE4PETS </strong> <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/petstores"> <strong><img src="https://img.icons8.com/ios/50/000000/online-store.png"></strong> </a>
+        <a class="nav-item nav-link" href="vets"> <strong> <img src="https://img.icons8.com/ios/50/000000/hospital.png"> </strong> </a>
+        <a class="nav-item nav-link" href="/"> <strong><img src="https://img.icons8.com/cotton/50/000000/person-male--v2.png"></strong> </a>
+
+
 
     </div>
-  </div>
-</nav>
+    </div>
+    </nav>
 
 
     <h5>
