--- a/templates/home.html
+++ b/templates/home.html
@@ -24,13 +24,10 @@
       <a class="nav-item nav-link" href="/goldfish" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/whole-fish.png"> </strong> </a>
         <a class="nav-item nav-link" href="/snakes" class="left"> <strong> <img src="https://img.icons8.com/ios/50/000000/snake.png"> </strong> </a>
         <a class="nav-item nav-link" href="/mice" class="left"> <strong> <img src="https://img.icons8.com/dotty/50/000000/mouse-animal.png"> </strong> </a>
-        <a class="nav-item nav-link active" href="/" id="w"> <strong> LOVE4PETS </strong> <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="dogs" class="right"> <strong> DOG<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
-        <a class="nav-item nav-link" href="cats" class="right"> <strong> CAT<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
-        <a class="nav-item nav-link" href="goldfish" class="right"> <strong> GOLDFISH<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
-        <a class="nav-item nav-link" href="snakes" class="right"> <strong> SNAKE<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
-        <a class="nav-item nav-link" href="mice" class="right"> <strong> MICE<br> <img src="https://img.icons8.com/ios/50/000000/online-store.png"> </strong> </a>
-
+        <a class="nav-item nav-link active" href="/home" id="w"> <strong> LOVE4PETS </strong> <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/petstores"> <strong><img src="https://img.icons8.com/ios/50/000000/online-store.png"></strong> </a>
+        <a class="nav-item nav-link" href="vets"> <strong> <img src="https://img.icons8.com/ios/50/000000/hospital.png"> </strong> </a>
+        <a class="nav-item nav-link" href="/"> <strong><img src="https://img.icons8.com/cotton/50/000000/person-male--v2.png"></strong> </a>
 
 
 
